Fix #2219 - Description field not wrapping with SuiteP theme after in line editing

--- a/themes/SuiteP/css/style.css
+++ b/themes/SuiteP/css/style.css
@@ -5296,11 +5296,6 @@ input#btn_ActionLine.button[type="button"] {
 
 
 .col-sm-6 .edit-view-field[field="billing_address_street"] input[type="text"],
-.col-sm-6 .edit-view-field[field="primary_address_street"] input[type="text"],
-.col-sm-6 .edit-view-field[field="shipping_address_street"] input[type="text"],
-.col-sm-6 .edit-view-field[field="alt_address_street"] input[type="text"]{
-    width: 88%;
-}
 
 #conditionLines_head,
 #fieldLines_head {
@@ -11204,4 +11199,9 @@ div#content div#pagecontent form#EditView div.edit.view table tbody tr td input[
         height: initial;
         padding: 0px 0px 15px 0px !important;
     }
+}
+
+.fix-inlineEdit-textarea {
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
